@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST blockdiag-0.5.1.tar.gz 34128 RMD160 ddfbd502993ee355fdf4224321eff4d025dd125e SHA1 19251fe869ed8347d3015fb2b8ea1af3a2b7e60c SHA256 178fea56291b417b04ddb1c8b53a0cf7b94727403c8a757b43b363f35c034148
 DIST blockdiag-0.5.2.tar.gz 34932 RMD160 120535497597b95642409ce10672d34027f6d6fe SHA1 eb414fe7d804a63302c2c6497600429481241a48 SHA256 b686f18f8ce45c8353e0687c1178035a362bd10bff5cc9f52a6fa7f97bd7ec88
-EBUILD blockdiag-0.5.1.ebuild 899 RMD160 f336187998336ce36273955b9ec2ea01c425d3e0 SHA1 ebc83499c2791644454708a5e1681497e6ae085f SHA256 6e0244e8d51a677a44ae497df1f3eadbbb21aec2bcb6e73f25053a588e5c315c
-EBUILD blockdiag-0.5.2.ebuild 900 RMD160 aa686582917eff6fa190328c126e733615598169 SHA1 f29627dafb80bbfbc2c4fae4e1bfe0765a2237e3 SHA256 0576b2f8de3450cfa222aca6188f498b0be538fc18c7133f7a1a17c2ab713c22
-MISC ChangeLog 1487 RMD160 7181dd48ec809fe066d6b706da7e1414c667c1bd SHA1 6c431bd712c9acbe9e01c9412205fac4eec69997 SHA256 c367b16efeda66d81fa1fc8c06998a1dbdad20c00fb4713e49e8ac31b2d7b6eb
+EBUILD blockdiag-0.5.2.ebuild 899 RMD160 f336187998336ce36273955b9ec2ea01c425d3e0 SHA1 ebc83499c2791644454708a5e1681497e6ae085f SHA256 6e0244e8d51a677a44ae497df1f3eadbbb21aec2bcb6e73f25053a588e5c315c
+MISC ChangeLog 1601 RMD160 35e063e1ef4bf4a9a1aa577119a6132dd87a7ea4 SHA1 f37b2ba891985ca4254e33aac1a8dc3b85ad1e47 SHA256 6bbb9c89ba32ae4619e9bb8a2c7af7cecfff7f694befbe6bc7cee074b529d42f
 MISC metadata.xml 669 RMD160 dcb67ada7b260b3ce4d5b5ec3f66ce2193ea2413 SHA1 22302b9b620dfb15f8c13137c866a5ac587e86e9 SHA256 24d91965daa15b89c7a8fa1e6eefaa6d459645d881cd67a1738198253cebd533
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAk0k9DIACgkQzJrj3cAXR0mnOgCgvhoUswy25CfQdgxkxf8qN3LL
-O1AAnirgYQWqk0YUlzBqIBwg0NtAOjT8
-=mmgA
+iEYEARECAAYFAk0lcO8ACgkQzJrj3cAXR0kcuQCfUDdxn6HXPEbiiaDnM1XR60+s
+I/wAn1BZ/1m/booXTESayimYKsEfIl/w
+=UvWK
 -----END PGP SIGNATURE-----
